--- a/Style.css
+++ b/Style.css
@@ -1,5 +1,5 @@
 body{
-    background-image: url(https://www.cataloniahotels.com/en/blog/wp-content/uploads/2018/07/Catalonia-Bavaro-Resort_Baja.jpg);
+    background-image: url(https://i.redd.it/5ydp846lmjc91.jpg);
     background-repeat: no-repeat;
     background-size: 100%;
 }
