--- a/Style.css
+++ b/Style.css
@@ -2,18 +2,129 @@ body{
     background-image: url(https://i.redd.it/5ydp846lmjc91.jpg);
     background-repeat: no-repeat;
     background-size: 100%;
+    background-attachment: fixed;
+    font-family: Arial, sans-serif;
+    text-align: center;
+    background-color: #fafafa;
+    margin: 0;
+    padding: 20px;
 }
 .heading{
-    padding: 30px;
+    padding: 10px;
     color: red;
+    font-size: 25px;
+}
+.container{
+    border: 5px solid black;
+    background-color: #FF741F;
+    width: 97%;
+    overflow:hidden;
+    border-radius: 20px;
+    position: relative;
+    padding: 25px;
+}
+.container a{
+    text-decoration: none;
+    color: inherit;
+}
+.Logo{
+    margin:.5% 15px;
+    border: 3px solid black;
+    box-shadow: 3px 3px 7px black;
+    border-radius: 50%;
+}
+.active{
+    background-color: rgb(255, 126, 66);
+    color: rgb(0, 0, 0);
+    box-shadow: inset 5px 5px 10px black;
+}
+.navigation,.active{
+    padding: 10px;
+    border-radius: 25px;
+    font-size: 40px;
+    margin: 1% 10px;
+    float: left;
+    overflow:hidden;
+    display: block;
+    width: 15%;
 }
 .navigation{
-    background-color:red;
-    width: 15%;
-    padding: 10px;
-    border-radius: 10px;
-    font-size: 25px;
     color: black;
-    margin: 10px;
-    float: left;
+    background-color: red;
+    box-shadow: 5px 5px 15px black;
+}
+.navigation a:hover{
+    background-color:rgb(255, 126, 66);
+    color: rgb(0, 0, 0);
+    border-radius: 25px;
+    display: block;
+}
+
+.mainContainer{
+    background-color: rgba(247, 115, 106, 0.897);
+    border-radius: 25px;
+    padding: 15px;
+    margin: 5px;
+    border: 3px solid black;
+}
+
+.map{
+    display: flex;
+    justify-content: center;
+    margin-top: 50px;       
+}
+
+.menu{
+    border: 1px solid #ccc;
+    background: #fff;
+    padding: 15px;
+    margin: 10px auto;
+    max-width: 400px;
+    border-radius: 8px;
+}
+
+.hidden {
+    display: none;
+}
+
+.item {
+    cursor: pointer;
+    padding: 10px;
+    border: 1px solid #ddd;
+    margin: 6px 0;
+    background-color: #f9f9f9;
+    border-radius: 5px;
+}
+
+.item:hover {
+    background-color: #e0e0e0;
+}
+
+.cart {
+    background-color: white;
+    border-top: 2px solid #444;
+    border-radius: 8px;
+    margin-top: 20px;
+    padding: 10px 15px;
+    max-width: 400px;
+    margin-left: auto;
+    margin-right: auto;
+    text-align: left;
+}
+
+.checkout {
+    display: block;
+    width: 100%;
+    margin-top: 10px;
+    padding: 10px;
+    font-size: 16px;
+    background: #4CAF50;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+.checkout:hover {
+    background: #45a049;
 }
